--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -77,6 +77,7 @@
   }
   .sidebar-primary-container {
     max-height: none;
+    overflow: visible; // b/c it can cut off italic fonts on left side
   }
 }
 
